scrollbars ipad fix

--- a/src/styles/sass/_base.scss
+++ b/src/styles/sass/_base.scss
@@ -1628,11 +1628,6 @@ label.required:before{
    Tablet Friendly
 ---------------------------------------------------
 ------------------------------------------------ */
-#divDivPage {
-    overflow-y: scroll;
-/*-webkit-overflow-scrolling: touch;*/
-    background-color: Blue;
-}
 
 body::-webkit-scrollbar {
     width: 1em;
